aligning CORS as per vercel deployment